2009-09-13: pyliblo 0.8.0

  * Changed license from GPL 2 to LGPL 2.1 (as did liblo in version 0.26).
  * Added protocol parameter to the Server class. Among other things, this
    allows TCP connections.
  * The minumum version of liblo required by pyliblo is now 0.24.
  * pyliblo can now be built with either Pyrex or Cython.

2009-01-19: pyliblo 0.7.2

  * Fixed all compiler warnings properly in Pyrex, without patching the
    generated C code.
  * Return values of callback functions are no longer ignored, but handled
    as in liblo.
  * The send_osc script can now be run with an explicit type string,
    instead of trying to determine the argument types automatically.

2008-08-03: pyliblo 0.7.1

  * Added manpages for send_osc and dump_osc.

2008-03-03: pyliblo 0.7.0

  * Fixed memory leaks, caused by failure to free() the result of
    lo_server_get_url() and lo_address_get_url().
  * Added parameter to Server.register_methods() to allow registering
    functions of an object other than the server itself.
  * Allow callback functions to have a variable number of arguments (*args).

2007-12-14: pyliblo 0.6.4

  * Avoid creating circular references when using methods as callback
    functions, which in some cases prevented the server object from being
    deleted properly.

2007-08-10: pyliblo 0.6.3

  * Patched the Pyrex-generated code to make it compile without warnings.
  * Always build from the existing C source by default.

2007-07-29: pyliblo 0.6.2

  * Minor code cleanup, hopefully not breaking anything.
  * Somewhat faster conversion of blob data from and to Python lists.

2007-07-07: pyliblo 0.6.1

  * Fixed a bug that caused the floats 0.0 and 1.0 to be sent as boolean.
    Thanks to Jesse Chappell for the patch.

2007-05-20: pyliblo 0.6

  * Added support for sending bundles, optionally with timestamps.
  * Added previously unsupported OSC data types (timetag, midi, symbol,
    true/false/nil/infinitum).
  * New @make_method decorator.